Overlap fix + FAQ response fix

--- a/css/index.css
+++ b/css/index.css
@@ -171,7 +171,7 @@ html {
   text-decoration: none;
 }
 .subsection h2 {
-  margin-top: 30px;
+  margin-top: 20px;
   font-family: 'geo-sans-light', cursive;
   font-size: 45px;
   background-image: url("../images/header1.png");
